tests/errors/json.xen
grab { parse } from "std::json"

spawn data: json = parse('{"name": "Alice"')
